# link_lagbe

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
apps/: __init__.py
apps/common/: models.py  views.py
apps/common/exceptions/: __init__.py  base_exception.py  users_exception.py
apps/links/: admin.py  urls.py
apps/links/docs/: __init__.py  link_decorator.py  link_schema.py
apps/links/migrations/: 0001_initial.py  0002_alter_link_options_alter_linkclick_options_and_more.py
apps/links/models/: __init__.py  link_model.py
apps/links/serializers/: __init__.py  link_serializer.py
apps/links/views/: __init__.py  link_view.py
apps/scripts/faker/: generate_links.py  generate_subscriptions.py  generate_users.py
apps/subscriptions/: admin.py
apps/subscriptions/helpers/: __init__.py  plan_choice_helper.py
apps/subscriptions/migrations/: 0001_initial.py  0002_alter_subscription_options_alter_subscription_table.py
apps/subscriptions/models/: subscription_model.py
apps/users/: admin.py  backend.py  tasks.py  urls.py
apps/users/docs/: __init__.py  auth_decorator.py  auth_schema.py  (+2 more)
config/: authentication.py  celery.py  settings.py  urls.py
deployment/: configmap.yml  namespace.yaml  secret.yml
deployment/celery/: celery-deployment.yml
deployment/django/: diango-deployment.yml  django-service.yml
deployment/nginx/: ingress.yml  nginx-configmap.yml
deployment/postgres/: postgres-deployment.yml  postgres-pvc.yml  postgres-service.yml
deployment/redis/: redis-deployment.yml  redis-service.yml
(+25 files in other folders)
