[project]
name = "link-lagbe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.4",
    "djangorestframework>=3.16.1",
    "drf-yasg>=1.21.10",
    "pyjwt>=2.10.1",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.0.0",
]
